[package]
name = "locker"
version = "0.0.2"
authors = ["mow44 <mow44@proton.me>"]
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.1"

[dependencies]
wrap_context = { path = "./wrap_context" }
impl_helper = { path = "./impl_helper" }

crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.28.1"
tokio = { version = "1.39.3", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
itertools = "0.13.0"
anyhow = "1.0"
memmap2 = "0.9"
memchr = "2"
